syntax = "proto3";
package pay;
option go_package = "./api/protobuf/pay;paypb";

service PayService {
  rpc Charge(ReqCharge) returns (RspCharge) {}
}

message CreditCardInfo {
  string credit_card_number = 1;
  int32 credit_card_cvv = 2;
  int32 credit_card_expiration_year = 3;
  int32 credit_card_expiration_month = 4;
}

message ReqCharge {
  float amount = 1;
  CreditCardInfo card_info = 2;
  string order_id = 3;
  uint32 user_id = 4;
}

message RspCharge {
  string transaction_id = 1;
}
